--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -42,19 +42,18 @@
   --header-h3-font-size: 1.75rem;
 
   /* Colors */
-  --text-color: #657b83;
-  --header-color: #dc322f;
-  --background-color: #fdf6e3;
-  --link-color: #b58900;
-  --text-bold-color: #d33682;
-  --code-highlight-color: #268bd240;
-  --inverse-text-color: #fdf6e3;
-  --inverse-background-color: #002b36;
-  --inverse-header-color: #fdf6e3;
-  --title-slide-background-color: #002b36;
-  --title-slide-text-color: #fdf6e3;
-  --header-background-color: #dc322f;
-  --header-background-text-color: #fdf6e3;
+  --text-color: #002B36;
+  --header-color: #D40067;
+  --background-color: #FDFCFA;
+  --link-color: #0079D1;
+  --code-highlight-color: rgba(255,255,0,0.5);
+  --inverse-text-color: #FDFCFA;
+  --inverse-background-color: #0079D1;
+  --inverse-header-color: #f3f3f3;
+  --title-slide-background-color: #0079D1;
+  --title-slide-text-color: #FDFCFA;
+  --header-background-color: #D40067;
+  --header-background-text-color: #FDFCFA;
 }
 
 html {
@@ -95,20 +94,20 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #6c71c4;
+  color: #002B36;
 }
 .remark-slide-number {
-  color: #93a1a1;
+  color: #586E75;
   opacity: 1;
   font-size: 0.9em;
 }
-strong { color: var(--text-bold-color); }
 a, a > code {
   color: var(--link-color);
   text-decoration: none;
 }
 .footnote {
   position: absolute;
+  color: #D40067;
   bottom: 60px;
   padding-right: 4em;
   font-size: 0.9em;
@@ -140,10 +139,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #93a1a1;
+  color: #777;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #586e75;
+  color: #000;
 }
 .right-column {
   width: 75%;
@@ -165,22 +164,22 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #cb4b16;
+  border-left: solid 5px lightgray;
   padding-left: 1em;
 }
 .remark-slide table {
   margin: auto;
-  border-top: 1px solid #839496;
-  border-bottom: 1px solid #839496;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
 }
 .remark-slide table thead th {
-  border-bottom: 1px solid #839496;
+  border-bottom: 1px solid #ddd;
 }
 th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #eee8d5;
+  background: #eee;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -190,7 +189,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #eee8d5;
+  background-color: #eee;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
