Slightly darker blue

--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -45,12 +45,12 @@
   --text-color: #002B36;
   --header-color: #D40067;
   --background-color: #FDFCFA;
-  --link-color: #0079D1;
+  --link-color: #006CB9;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FDFCFA;
-  --inverse-background-color: #0079D1;
+  --inverse-background-color: #006CB9;
   --inverse-header-color: #f3f3f3;
-  --title-slide-background-color: #0079D1;
+  --title-slide-background-color: #006CB9;
   --title-slide-text-color: #FDFCFA;
   --header-background-color: #D40067;
   --header-background-text-color: #FDFCFA;
